test/ddc-spec/error/01-ErrorExp/46-CaseFieldTypeMismatch/Main.dct

-- ISSUE #411: Allow types of pattern binders to be specified in Source Tetar.
module Main

data Foo where
        Foo : Nat# -> Foo

with letrec

foo (x: Foo): Bool#
 = case x of
        Foo (x: Bool#) -> True
